--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,13 @@
     <string name="fmt_sign_up_in_hint_text_email_address">Email</string>
     <string name="fmt_sign_up_in_required">Обязательно*</string>
 
+    <string name="fmt_wallet_main_your_card">Ваши карты</string>
+
+    <string name="fmt_scan_card_photo_your_front_card">Сфотографируйте лицевую сторону карты</string>
+    <string name="fmt_scan_card_photo_your_back_card">Сфотографируйте оборотную сторону карты</string>
+
+    <string name="nav_bar_wallet">Кошелёк</string>
+
     <string name="error_provide_access_camera">К сожалению, вы не предоставили доступ к камере</string>
     <string name="error_text_is_not_empty">Поле не может быть пустым</string>
     <string name="error_email_incorrect">Адрес электронной почты введён некорректно</string>
